// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddCommentForm /> @postCommentLoading === true 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <Connect(LanguageProvider)
    key="en"
    locale="en"
    messages={Object {}}
  >
    <LanguageProvider
      dispatch={[Function]}
      locale="en"
      messages={Object {}}
    >
      <IntlProvider
        key="en"
        locale="en"
      >
        <ConnectedRouter
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "createHref": [Function],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
        >
          <Router
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "createHref": [Function],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
          >
            <ReduxForm
              form="form-1010"
              handleSubmit={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [MockFunction],
                    ],
                    Array [
                      [MockFunction],
                    ],
                    Array [
                      [MockFunction],
                    ],
                    Array [
                      [MockFunction],
                    ],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              invalid={false}
              postComment={[MockFunction]}
              postCommentLoading={true}
              submitting={false}
              translations={Object {}}
            >
              <Connect(Form(AddCommentForm))
                destroyOnUnmount={true}
                enableReinitialize={false}
                forceUnregisterOnUnmount={false}
                form="form-1010"
                getFormState={[Function]}
                handleSubmit={
                  [MockFunction] {
                    "calls": Array [
                      Array [
                        [MockFunction],
                      ],
                      Array [
                        [MockFunction],
                      ],
                      Array [
                        [MockFunction],
                      ],
                      Array [
                        [MockFunction],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "isThrow": false,
                        "value": undefined,
                      },
                      Object {
                        "isThrow": false,
                        "value": undefined,
                      },
                      Object {
                        "isThrow": false,
                        "value": undefined,
                      },
                      Object {
                        "isThrow": false,
                        "value": undefined,
                      },
                    ],
                  }
                }
                invalid={false}
                keepDirtyOnReinitialize={false}
                persistentSubmitErrors={false}
                postComment={[MockFunction]}
                postCommentLoading={true}
                pure={true}
                shouldAsyncValidate={[Function]}
                shouldError={[Function]}
                shouldValidate={[Function]}
                shouldWarn={[Function]}
                submitting={false}
                touchOnBlur={true}
                touchOnChange={false}
                translations={Object {}}
                updateUnregisteredFields={false}
              >
                <Form(AddCommentForm)
                  anyTouched={false}
                  array={
                    Object {
                      "insert": [Function],
                      "move": [Function],
                      "pop": [Function],
                      "push": [Function],
                      "remove": [Function],
                      "removeAll": [Function],
                      "shift": [Function],
                      "splice": [Function],
                      "swap": [Function],
                      "unshift": [Function],
                    }
                  }
                  arrayInsert={[Function]}
                  arrayMove={[Function]}
                  arrayPop={[Function]}
                  arrayPush={[Function]}
                  arrayRemove={[Function]}
                  arrayRemoveAll={[Function]}
                  arrayShift={[Function]}
                  arraySplice={[Function]}
                  arraySwap={[Function]}
                  arrayUnshift={[Function]}
                  asyncValidating={false}
                  autofill={[Function]}
                  blur={[Function]}
                  change={[Function]}
                  clearAsyncError={[Function]}
                  clearFields={[Function]}
                  clearSubmit={[Function]}
                  clearSubmitErrors={[Function]}
                  destroy={[Function]}
                  destroyOnUnmount={true}
                  dirty={false}
                  dispatch={[Function]}
                  enableReinitialize={false}
                  focus={[Function]}
                  forceUnregisterOnUnmount={false}
                  form="form-1010"
                  getFormState={[Function]}
                  handleSubmit={
                    [MockFunction] {
                      "calls": Array [
                        Array [
                          [MockFunction],
                        ],
                        Array [
                          [MockFunction],
                        ],
                        Array [
                          [MockFunction],
                        ],
                        Array [
                          [MockFunction],
                        ],
                      ],
                      "results": Array [
                        Object {
                          "isThrow": false,
                          "value": undefined,
                        },
                        Object {
                          "isThrow": false,
                          "value": undefined,
                        },
                        Object {
                          "isThrow": false,
                          "value": undefined,
                        },
                        Object {
                          "isThrow": false,
                          "value": undefined,
                        },
                      ],
                    }
                  }
                  initialize={[Function]}
                  initialized={false}
                  invalid={true}
                  keepDirtyOnReinitialize={false}
                  persistentSubmitErrors={false}
                  postComment={[MockFunction]}
                  postCommentLoading={true}
                  pristine={true}
                  pure={true}
                  registerField={[Function]}
                  registeredFields={
                    Immutable.Map {
                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Immutable.Map {
                        "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                        "type": "Field",
                        "count": 1,
                      },
                    }
                  }
                  reset={[Function]}
                  resetSection={[Function]}
                  setSubmitFailed={[Function]}
                  setSubmitSucceeded={[Function]}
                  shouldAsyncValidate={[Function]}
                  shouldError={[Function]}
                  shouldValidate={[Function]}
                  shouldWarn={[Function]}
                  startAsyncValidation={[Function]}
                  startSubmit={[Function]}
                  stopAsyncValidation={[Function]}
                  stopSubmit={[Function]}
                  submit={[Function]}
                  submitFailed={false}
                  submitSucceeded={false}
                  submitting={false}
                  syncErrors={
                    Object {
                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                        "defaultMessage": "Required field",
                        "id": "app.containers.AskQuestion.requiredField",
                      },
                    }
                  }
                  syncWarnings={
                    Object {
                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                        "defaultMessage": "Required field",
                        "id": "app.containers.AskQuestion.requiredField",
                      },
                    }
                  }
                  touch={[Function]}
                  touchOnBlur={true}
                  touchOnChange={false}
                  translations={Object {}}
                  unregisterField={[Function]}
                  untouch={[Function]}
                  updateSyncErrors={[Function]}
                  updateSyncWarnings={[Function]}
                  updateUnregisteredFields={false}
                  valid={false}
                  validExceptSubmit={false}
                  values={Immutable.Map {}}
                >
                  <AddCommentForm
                    anyTouched={false}
                    array={
                      Object {
                        "insert": [Function],
                        "move": [Function],
                        "pop": [Function],
                        "push": [Function],
                        "remove": [Function],
                        "removeAll": [Function],
                        "shift": [Function],
                        "splice": [Function],
                        "swap": [Function],
                        "unshift": [Function],
                      }
                    }
                    asyncValidate={[Function]}
                    asyncValidating={false}
                    autofill={[Function]}
                    blur={[Function]}
                    change={[Function]}
                    clearAsyncError={[Function]}
                    clearFields={[Function]}
                    clearSubmit={[Function]}
                    clearSubmitErrors={[Function]}
                    destroy={[Function]}
                    dirty={false}
                    dispatch={[Function]}
                    form="form-1010"
                    handleSubmit={
                      [MockFunction] {
                        "calls": Array [
                          Array [
                            [MockFunction],
                          ],
                          Array [
                            [MockFunction],
                          ],
                          Array [
                            [MockFunction],
                          ],
                          Array [
                            [MockFunction],
                          ],
                        ],
                        "results": Array [
                          Object {
                            "isThrow": false,
                            "value": undefined,
                          },
                          Object {
                            "isThrow": false,
                            "value": undefined,
                          },
                          Object {
                            "isThrow": false,
                            "value": undefined,
                          },
                          Object {
                            "isThrow": false,
                            "value": undefined,
                          },
                        ],
                      }
                    }
                    initialize={[Function]}
                    initialized={false}
                    invalid={true}
                    postComment={[MockFunction]}
                    postCommentLoading={true}
                    pristine={true}
                    pure={true}
                    reset={[Function]}
                    resetSection={[Function]}
                    submit={[Function]}
                    submitFailed={false}
                    submitSucceeded={false}
                    submitting={false}
                    touch={[Function]}
                    translations={Object {}}
                    untouch={[Function]}
                    valid={false}
                  >
                    <div
                      className="add-comment"
                    >
                      <form>
                        <div>
                          <Field
                            component={[Function]}
                            disabled={true}
                            name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                            validate={
                              Array [
                                [Function],
                                [Function],
                              ]
                            }
                            warn={
                              Array [
                                [Function],
                                [Function],
                              ]
                            }
                          >
                            <Connect(ConnectedField)
                              _reduxForm={
                                Object {
                                  "anyTouched": false,
                                  "array": Object {
                                    "insert": [Function],
                                    "move": [Function],
                                    "pop": [Function],
                                    "push": [Function],
                                    "remove": [Function],
                                    "removeAll": [Function],
                                    "shift": [Function],
                                    "splice": [Function],
                                    "swap": [Function],
                                    "unshift": [Function],
                                  },
                                  "arrayInsert": [Function],
                                  "arrayMove": [Function],
                                  "arrayPop": [Function],
                                  "arrayPush": [Function],
                                  "arrayRemove": [Function],
                                  "arrayRemoveAll": [Function],
                                  "arrayShift": [Function],
                                  "arraySplice": [Function],
                                  "arraySwap": [Function],
                                  "arrayUnshift": [Function],
                                  "asyncErrors": undefined,
                                  "asyncValidate": [Function],
                                  "asyncValidating": false,
                                  "autofill": [Function],
                                  "blur": [Function],
                                  "change": [Function],
                                  "clearAsyncError": [Function],
                                  "clearFields": [Function],
                                  "clearSubmit": [Function],
                                  "clearSubmitErrors": [Function],
                                  "destroy": [Function],
                                  "destroyOnUnmount": true,
                                  "dirty": false,
                                  "dispatch": [Function],
                                  "enableReinitialize": false,
                                  "error": undefined,
                                  "focus": [Function],
                                  "forceUnregisterOnUnmount": false,
                                  "form": "form-1010",
                                  "getFormState": [Function],
                                  "getValues": [Function],
                                  "handleSubmit": [MockFunction] {
                                    "calls": Array [
                                      Array [
                                        [MockFunction],
                                      ],
                                      Array [
                                        [MockFunction],
                                      ],
                                      Array [
                                        [MockFunction],
                                      ],
                                      Array [
                                        [MockFunction],
                                      ],
                                    ],
                                    "results": Array [
                                      Object {
                                        "isThrow": false,
                                        "value": undefined,
                                      },
                                      Object {
                                        "isThrow": false,
                                        "value": undefined,
                                      },
                                      Object {
                                        "isThrow": false,
                                        "value": undefined,
                                      },
                                      Object {
                                        "isThrow": false,
                                        "value": undefined,
                                      },
                                    ],
                                  },
                                  "initialValues": undefined,
                                  "initialize": [Function],
                                  "initialized": false,
                                  "invalid": true,
                                  "keepDirtyOnReinitialize": false,
                                  "persistentSubmitErrors": false,
                                  "postComment": [MockFunction],
                                  "postCommentLoading": true,
                                  "pristine": true,
                                  "pure": true,
                                  "register": [Function],
                                  "registerField": [Function],
                                  "registerInnerOnSubmit": [Function],
                                  "registeredFields": Immutable.Map {
                                    "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Immutable.Map {
                                      "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                                      "type": "Field",
                                      "count": 1,
                                    },
                                  },
                                  "reset": [Function],
                                  "resetSection": [Function],
                                  "sectionPrefix": undefined,
                                  "setSubmitFailed": [Function],
                                  "setSubmitSucceeded": [Function],
                                  "shouldAsyncValidate": [Function],
                                  "shouldError": [Function],
                                  "shouldValidate": [Function],
                                  "shouldWarn": [Function],
                                  "startAsyncValidation": [Function],
                                  "startSubmit": [Function],
                                  "stopAsyncValidation": [Function],
                                  "stopSubmit": [Function],
                                  "submit": [Function],
                                  "submitFailed": false,
                                  "submitSucceeded": false,
                                  "submitting": false,
                                  "syncErrors": Object {
                                    "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                      "defaultMessage": "Required field",
                                      "id": "app.containers.AskQuestion.requiredField",
                                    },
                                  },
                                  "syncWarnings": Object {
                                    "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                      "defaultMessage": "Required field",
                                      "id": "app.containers.AskQuestion.requiredField",
                                    },
                                  },
                                  "touch": [Function],
                                  "touchOnBlur": true,
                                  "touchOnChange": false,
                                  "translations": Object {},
                                  "triggerSubmit": undefined,
                                  "unregister": [Function],
                                  "unregisterField": [Function],
                                  "untouch": [Function],
                                  "updateSyncErrors": [Function],
                                  "updateSyncWarnings": [Function],
                                  "updateUnregisteredFields": false,
                                  "valid": false,
                                  "validExceptSubmit": false,
                                  "values": Immutable.Map {},
                                  "warning": undefined,
                                }
                              }
                              component={[Function]}
                              disabled={true}
                              name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                              normalize={[Function]}
                              validate={
                                Array [
                                  [Function],
                                  [Function],
                                ]
                              }
                              warn={
                                Array [
                                  [Function],
                                  [Function],
                                ]
                              }
                            >
                              <ConnectedField
                                _reduxForm={
                                  Object {
                                    "anyTouched": false,
                                    "array": Object {
                                      "insert": [Function],
                                      "move": [Function],
                                      "pop": [Function],
                                      "push": [Function],
                                      "remove": [Function],
                                      "removeAll": [Function],
                                      "shift": [Function],
                                      "splice": [Function],
                                      "swap": [Function],
                                      "unshift": [Function],
                                    },
                                    "arrayInsert": [Function],
                                    "arrayMove": [Function],
                                    "arrayPop": [Function],
                                    "arrayPush": [Function],
                                    "arrayRemove": [Function],
                                    "arrayRemoveAll": [Function],
                                    "arrayShift": [Function],
                                    "arraySplice": [Function],
                                    "arraySwap": [Function],
                                    "arrayUnshift": [Function],
                                    "asyncErrors": undefined,
                                    "asyncValidate": [Function],
                                    "asyncValidating": false,
                                    "autofill": [Function],
                                    "blur": [Function],
                                    "change": [Function],
                                    "clearAsyncError": [Function],
                                    "clearFields": [Function],
                                    "clearSubmit": [Function],
                                    "clearSubmitErrors": [Function],
                                    "destroy": [Function],
                                    "destroyOnUnmount": true,
                                    "dirty": false,
                                    "dispatch": [Function],
                                    "enableReinitialize": false,
                                    "error": undefined,
                                    "focus": [Function],
                                    "forceUnregisterOnUnmount": false,
                                    "form": "form-1010",
                                    "getFormState": [Function],
                                    "getValues": [Function],
                                    "handleSubmit": [MockFunction] {
                                      "calls": Array [
                                        Array [
                                          [MockFunction],
                                        ],
                                        Array [
                                          [MockFunction],
                                        ],
                                        Array [
                                          [MockFunction],
                                        ],
                                        Array [
                                          [MockFunction],
                                        ],
                                      ],
                                      "results": Array [
                                        Object {
                                          "isThrow": false,
                                          "value": undefined,
                                        },
                                        Object {
                                          "isThrow": false,
                                          "value": undefined,
                                        },
                                        Object {
                                          "isThrow": false,
                                          "value": undefined,
                                        },
                                        Object {
                                          "isThrow": false,
                                          "value": undefined,
                                        },
                                      ],
                                    },
                                    "initialValues": undefined,
                                    "initialize": [Function],
                                    "initialized": false,
                                    "invalid": true,
                                    "keepDirtyOnReinitialize": false,
                                    "persistentSubmitErrors": false,
                                    "postComment": [MockFunction],
                                    "postCommentLoading": true,
                                    "pristine": true,
                                    "pure": true,
                                    "register": [Function],
                                    "registerField": [Function],
                                    "registerInnerOnSubmit": [Function],
                                    "registeredFields": Immutable.Map {
                                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Immutable.Map {
                                        "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                                        "type": "Field",
                                        "count": 1,
                                      },
                                    },
                                    "reset": [Function],
                                    "resetSection": [Function],
                                    "sectionPrefix": undefined,
                                    "setSubmitFailed": [Function],
                                    "setSubmitSucceeded": [Function],
                                    "shouldAsyncValidate": [Function],
                                    "shouldError": [Function],
                                    "shouldValidate": [Function],
                                    "shouldWarn": [Function],
                                    "startAsyncValidation": [Function],
                                    "startSubmit": [Function],
                                    "stopAsyncValidation": [Function],
                                    "stopSubmit": [Function],
                                    "submit": [Function],
                                    "submitFailed": false,
                                    "submitSucceeded": false,
                                    "submitting": false,
                                    "syncErrors": Object {
                                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                    },
                                    "syncWarnings": Object {
                                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                    },
                                    "touch": [Function],
                                    "touchOnBlur": true,
                                    "touchOnChange": false,
                                    "translations": Object {},
                                    "triggerSubmit": undefined,
                                    "unregister": [Function],
                                    "unregisterField": [Function],
                                    "untouch": [Function],
                                    "updateSyncErrors": [Function],
                                    "updateSyncWarnings": [Function],
                                    "updateUnregisteredFields": false,
                                    "valid": false,
                                    "validExceptSubmit": false,
                                    "values": Immutable.Map {},
                                    "warning": undefined,
                                  }
                                }
                                asyncValidating={false}
                                component={[Function]}
                                dirty={false}
                                disabled={true}
                                dispatch={[Function]}
                                name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                                normalize={[Function]}
                                pristine={true}
                                syncError={
                                  Object {
                                    "defaultMessage": "Required field",
                                    "id": "app.containers.AskQuestion.requiredField",
                                  }
                                }
                                syncWarning={
                                  Object {
                                    "defaultMessage": "Required field",
                                    "id": "app.containers.AskQuestion.requiredField",
                                  }
                                }
                                validate={
                                  Array [
                                    [Function],
                                    [Function],
                                  ]
                                }
                                warn={
                                  Array [
                                    [Function],
                                    [Function],
                                  ]
                                }
                              >
                                <TextareaField
                                  disabled={true}
                                  input={
                                    Object {
                                      "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                                      "onBlur": [Function],
                                      "onChange": [Function],
                                      "onDragStart": [Function],
                                      "onDrop": [Function],
                                      "onFocus": [Function],
                                      "value": "",
                                    }
                                  }
                                  meta={
                                    Object {
                                      "active": false,
                                      "asyncValidating": false,
                                      "autofilled": false,
                                      "dirty": false,
                                      "dispatch": [Function],
                                      "error": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                      "form": "form-1010",
                                      "initial": undefined,
                                      "invalid": true,
                                      "pristine": true,
                                      "submitFailed": false,
                                      "submitting": false,
                                      "touched": false,
                                      "valid": false,
                                      "visited": false,
                                      "warning": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                    }
                                  }
                                >
                                  <div>
                                    <h6 />
                                    <textarea
                                      className="textarea form-control"
                                      disabled={true}
                                      name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onDragStart={[Function]}
                                      onDrop={[Function]}
                                      onFocus={[Function]}
                                      value=""
                                    />
                                    <h6
                                      className="text-danger"
                                    />
                                  </div>
                                </TextareaField>
                              </ConnectedField>
                            </Connect(ConnectedField)>
                          </Field>
                        </div>
                        <div>
                          <button
                            className="btn btn-secondary"
                            disabled={true}
                            id="app_view_question_post_comment_buttonundefined"
                            type="submit"
                          >
                            <LoadingIndicator>
                              <Wrapper>
                                <div
                                  className="Wrapper-ThVjl bNvReZ"
                                >
                                  <Circle>
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG ehmTAR"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-1.1}
                                    rotate={30}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG zdGXL"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-1}
                                    rotate={60}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG hZmZmt"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.9}
                                    rotate={90}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG hmjUiu"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.8}
                                    rotate={120}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG SCPwQ"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.7}
                                    rotate={150}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG drXvaa"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.6}
                                    rotate={180}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG OJgdC"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.5}
                                    rotate={210}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG gZiMKx"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.4}
                                    rotate={240}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG okLMH"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.3}
                                    rotate={270}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG eaNyAy"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.2}
                                    rotate={300}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG eJcvxt"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                  <Circle
                                    delay={-0.1}
                                    rotate={330}
                                  >
                                    <Circle__CirclePrimitive>
                                      <div
                                        className="Circle__CirclePrimitive-cPqaOG iUFKZk"
                                      />
                                    </Circle__CirclePrimitive>
                                  </Circle>
                                </div>
                              </Wrapper>
                            </LoadingIndicator>
                          </button>
                        </div>
                      </form>
                    </div>
                  </AddCommentForm>
                </Form(AddCommentForm)>
              </Connect(Form(AddCommentForm))>
            </ReduxForm>
          </Router>
        </ConnectedRouter>
      </IntlProvider>
    </LanguageProvider>
  </Connect(LanguageProvider)>
</Provider>
`;

exports[`<AddCommentForm /> snapshot test 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <Connect(LanguageProvider)
    key="en"
    locale="en"
    messages={Object {}}
  >
    <LanguageProvider
      dispatch={[Function]}
      locale="en"
      messages={Object {}}
    >
      <IntlProvider
        key="en"
        locale="en"
      >
        <ConnectedRouter
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "createHref": [Function],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
        >
          <Router
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "createHref": [Function],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
          >
            <ReduxForm
              form="form-1010"
              handleSubmit={
                [MockFunction] {
                  "calls": Array [
                    Array [
                      [MockFunction],
                    ],
                    Array [
                      [MockFunction],
                    ],
                  ],
                  "results": Array [
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                    Object {
                      "isThrow": false,
                      "value": undefined,
                    },
                  ],
                }
              }
              invalid={false}
              postComment={[MockFunction]}
              postCommentLoading={false}
              submitting={false}
              translations={Object {}}
            >
              <Connect(Form(AddCommentForm))
                destroyOnUnmount={true}
                enableReinitialize={false}
                forceUnregisterOnUnmount={false}
                form="form-1010"
                getFormState={[Function]}
                handleSubmit={
                  [MockFunction] {
                    "calls": Array [
                      Array [
                        [MockFunction],
                      ],
                      Array [
                        [MockFunction],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "isThrow": false,
                        "value": undefined,
                      },
                      Object {
                        "isThrow": false,
                        "value": undefined,
                      },
                    ],
                  }
                }
                invalid={false}
                keepDirtyOnReinitialize={false}
                persistentSubmitErrors={false}
                postComment={[MockFunction]}
                postCommentLoading={false}
                pure={true}
                shouldAsyncValidate={[Function]}
                shouldError={[Function]}
                shouldValidate={[Function]}
                shouldWarn={[Function]}
                submitting={false}
                touchOnBlur={true}
                touchOnChange={false}
                translations={Object {}}
                updateUnregisteredFields={false}
              >
                <Form(AddCommentForm)
                  anyTouched={false}
                  array={
                    Object {
                      "insert": [Function],
                      "move": [Function],
                      "pop": [Function],
                      "push": [Function],
                      "remove": [Function],
                      "removeAll": [Function],
                      "shift": [Function],
                      "splice": [Function],
                      "swap": [Function],
                      "unshift": [Function],
                    }
                  }
                  arrayInsert={[Function]}
                  arrayMove={[Function]}
                  arrayPop={[Function]}
                  arrayPush={[Function]}
                  arrayRemove={[Function]}
                  arrayRemoveAll={[Function]}
                  arrayShift={[Function]}
                  arraySplice={[Function]}
                  arraySwap={[Function]}
                  arrayUnshift={[Function]}
                  asyncValidating={false}
                  autofill={[Function]}
                  blur={[Function]}
                  change={[Function]}
                  clearAsyncError={[Function]}
                  clearFields={[Function]}
                  clearSubmit={[Function]}
                  clearSubmitErrors={[Function]}
                  destroy={[Function]}
                  destroyOnUnmount={true}
                  dirty={false}
                  dispatch={[Function]}
                  enableReinitialize={false}
                  focus={[Function]}
                  forceUnregisterOnUnmount={false}
                  form="form-1010"
                  getFormState={[Function]}
                  handleSubmit={
                    [MockFunction] {
                      "calls": Array [
                        Array [
                          [MockFunction],
                        ],
                        Array [
                          [MockFunction],
                        ],
                      ],
                      "results": Array [
                        Object {
                          "isThrow": false,
                          "value": undefined,
                        },
                        Object {
                          "isThrow": false,
                          "value": undefined,
                        },
                      ],
                    }
                  }
                  initialize={[Function]}
                  initialized={false}
                  invalid={true}
                  keepDirtyOnReinitialize={false}
                  persistentSubmitErrors={false}
                  postComment={[MockFunction]}
                  postCommentLoading={false}
                  pristine={true}
                  pure={true}
                  registerField={[Function]}
                  registeredFields={
                    Immutable.Map {
                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Immutable.Map {
                        "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                        "type": "Field",
                        "count": 1,
                      },
                    }
                  }
                  reset={[Function]}
                  resetSection={[Function]}
                  setSubmitFailed={[Function]}
                  setSubmitSucceeded={[Function]}
                  shouldAsyncValidate={[Function]}
                  shouldError={[Function]}
                  shouldValidate={[Function]}
                  shouldWarn={[Function]}
                  startAsyncValidation={[Function]}
                  startSubmit={[Function]}
                  stopAsyncValidation={[Function]}
                  stopSubmit={[Function]}
                  submit={[Function]}
                  submitFailed={false}
                  submitSucceeded={false}
                  submitting={false}
                  syncErrors={
                    Object {
                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                        "defaultMessage": "Required field",
                        "id": "app.containers.AskQuestion.requiredField",
                      },
                    }
                  }
                  syncWarnings={
                    Object {
                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                        "defaultMessage": "Required field",
                        "id": "app.containers.AskQuestion.requiredField",
                      },
                    }
                  }
                  touch={[Function]}
                  touchOnBlur={true}
                  touchOnChange={false}
                  translations={Object {}}
                  unregisterField={[Function]}
                  untouch={[Function]}
                  updateSyncErrors={[Function]}
                  updateSyncWarnings={[Function]}
                  updateUnregisteredFields={false}
                  valid={false}
                  validExceptSubmit={false}
                  values={Immutable.Map {}}
                >
                  <AddCommentForm
                    anyTouched={false}
                    array={
                      Object {
                        "insert": [Function],
                        "move": [Function],
                        "pop": [Function],
                        "push": [Function],
                        "remove": [Function],
                        "removeAll": [Function],
                        "shift": [Function],
                        "splice": [Function],
                        "swap": [Function],
                        "unshift": [Function],
                      }
                    }
                    asyncValidate={[Function]}
                    asyncValidating={false}
                    autofill={[Function]}
                    blur={[Function]}
                    change={[Function]}
                    clearAsyncError={[Function]}
                    clearFields={[Function]}
                    clearSubmit={[Function]}
                    clearSubmitErrors={[Function]}
                    destroy={[Function]}
                    dirty={false}
                    dispatch={[Function]}
                    form="form-1010"
                    handleSubmit={
                      [MockFunction] {
                        "calls": Array [
                          Array [
                            [MockFunction],
                          ],
                          Array [
                            [MockFunction],
                          ],
                        ],
                        "results": Array [
                          Object {
                            "isThrow": false,
                            "value": undefined,
                          },
                          Object {
                            "isThrow": false,
                            "value": undefined,
                          },
                        ],
                      }
                    }
                    initialize={[Function]}
                    initialized={false}
                    invalid={true}
                    postComment={[MockFunction]}
                    postCommentLoading={false}
                    pristine={true}
                    pure={true}
                    reset={[Function]}
                    resetSection={[Function]}
                    submit={[Function]}
                    submitFailed={false}
                    submitSucceeded={false}
                    submitting={false}
                    touch={[Function]}
                    translations={Object {}}
                    untouch={[Function]}
                    valid={false}
                  >
                    <div
                      className="add-comment"
                    >
                      <form>
                        <div>
                          <Field
                            component={[Function]}
                            disabled={false}
                            name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                            validate={
                              Array [
                                [Function],
                                [Function],
                              ]
                            }
                            warn={
                              Array [
                                [Function],
                                [Function],
                              ]
                            }
                          >
                            <Connect(ConnectedField)
                              _reduxForm={
                                Object {
                                  "anyTouched": false,
                                  "array": Object {
                                    "insert": [Function],
                                    "move": [Function],
                                    "pop": [Function],
                                    "push": [Function],
                                    "remove": [Function],
                                    "removeAll": [Function],
                                    "shift": [Function],
                                    "splice": [Function],
                                    "swap": [Function],
                                    "unshift": [Function],
                                  },
                                  "arrayInsert": [Function],
                                  "arrayMove": [Function],
                                  "arrayPop": [Function],
                                  "arrayPush": [Function],
                                  "arrayRemove": [Function],
                                  "arrayRemoveAll": [Function],
                                  "arrayShift": [Function],
                                  "arraySplice": [Function],
                                  "arraySwap": [Function],
                                  "arrayUnshift": [Function],
                                  "asyncErrors": undefined,
                                  "asyncValidate": [Function],
                                  "asyncValidating": false,
                                  "autofill": [Function],
                                  "blur": [Function],
                                  "change": [Function],
                                  "clearAsyncError": [Function],
                                  "clearFields": [Function],
                                  "clearSubmit": [Function],
                                  "clearSubmitErrors": [Function],
                                  "destroy": [Function],
                                  "destroyOnUnmount": true,
                                  "dirty": false,
                                  "dispatch": [Function],
                                  "enableReinitialize": false,
                                  "error": undefined,
                                  "focus": [Function],
                                  "forceUnregisterOnUnmount": false,
                                  "form": "form-1010",
                                  "getFormState": [Function],
                                  "getValues": [Function],
                                  "handleSubmit": [MockFunction] {
                                    "calls": Array [
                                      Array [
                                        [MockFunction],
                                      ],
                                      Array [
                                        [MockFunction],
                                      ],
                                    ],
                                    "results": Array [
                                      Object {
                                        "isThrow": false,
                                        "value": undefined,
                                      },
                                      Object {
                                        "isThrow": false,
                                        "value": undefined,
                                      },
                                    ],
                                  },
                                  "initialValues": undefined,
                                  "initialize": [Function],
                                  "initialized": false,
                                  "invalid": true,
                                  "keepDirtyOnReinitialize": false,
                                  "persistentSubmitErrors": false,
                                  "postComment": [MockFunction],
                                  "postCommentLoading": false,
                                  "pristine": true,
                                  "pure": true,
                                  "register": [Function],
                                  "registerField": [Function],
                                  "registerInnerOnSubmit": [Function],
                                  "registeredFields": Immutable.Map {
                                    "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Immutable.Map {
                                      "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                                      "type": "Field",
                                      "count": 1,
                                    },
                                  },
                                  "reset": [Function],
                                  "resetSection": [Function],
                                  "sectionPrefix": undefined,
                                  "setSubmitFailed": [Function],
                                  "setSubmitSucceeded": [Function],
                                  "shouldAsyncValidate": [Function],
                                  "shouldError": [Function],
                                  "shouldValidate": [Function],
                                  "shouldWarn": [Function],
                                  "startAsyncValidation": [Function],
                                  "startSubmit": [Function],
                                  "stopAsyncValidation": [Function],
                                  "stopSubmit": [Function],
                                  "submit": [Function],
                                  "submitFailed": false,
                                  "submitSucceeded": false,
                                  "submitting": false,
                                  "syncErrors": Object {
                                    "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                      "defaultMessage": "Required field",
                                      "id": "app.containers.AskQuestion.requiredField",
                                    },
                                  },
                                  "syncWarnings": Object {
                                    "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                      "defaultMessage": "Required field",
                                      "id": "app.containers.AskQuestion.requiredField",
                                    },
                                  },
                                  "touch": [Function],
                                  "touchOnBlur": true,
                                  "touchOnChange": false,
                                  "translations": Object {},
                                  "triggerSubmit": undefined,
                                  "unregister": [Function],
                                  "unregisterField": [Function],
                                  "untouch": [Function],
                                  "updateSyncErrors": [Function],
                                  "updateSyncWarnings": [Function],
                                  "updateUnregisteredFields": false,
                                  "valid": false,
                                  "validExceptSubmit": false,
                                  "values": Immutable.Map {},
                                  "warning": undefined,
                                }
                              }
                              component={[Function]}
                              disabled={false}
                              name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                              normalize={[Function]}
                              validate={
                                Array [
                                  [Function],
                                  [Function],
                                ]
                              }
                              warn={
                                Array [
                                  [Function],
                                  [Function],
                                ]
                              }
                            >
                              <ConnectedField
                                _reduxForm={
                                  Object {
                                    "anyTouched": false,
                                    "array": Object {
                                      "insert": [Function],
                                      "move": [Function],
                                      "pop": [Function],
                                      "push": [Function],
                                      "remove": [Function],
                                      "removeAll": [Function],
                                      "shift": [Function],
                                      "splice": [Function],
                                      "swap": [Function],
                                      "unshift": [Function],
                                    },
                                    "arrayInsert": [Function],
                                    "arrayMove": [Function],
                                    "arrayPop": [Function],
                                    "arrayPush": [Function],
                                    "arrayRemove": [Function],
                                    "arrayRemoveAll": [Function],
                                    "arrayShift": [Function],
                                    "arraySplice": [Function],
                                    "arraySwap": [Function],
                                    "arrayUnshift": [Function],
                                    "asyncErrors": undefined,
                                    "asyncValidate": [Function],
                                    "asyncValidating": false,
                                    "autofill": [Function],
                                    "blur": [Function],
                                    "change": [Function],
                                    "clearAsyncError": [Function],
                                    "clearFields": [Function],
                                    "clearSubmit": [Function],
                                    "clearSubmitErrors": [Function],
                                    "destroy": [Function],
                                    "destroyOnUnmount": true,
                                    "dirty": false,
                                    "dispatch": [Function],
                                    "enableReinitialize": false,
                                    "error": undefined,
                                    "focus": [Function],
                                    "forceUnregisterOnUnmount": false,
                                    "form": "form-1010",
                                    "getFormState": [Function],
                                    "getValues": [Function],
                                    "handleSubmit": [MockFunction] {
                                      "calls": Array [
                                        Array [
                                          [MockFunction],
                                        ],
                                        Array [
                                          [MockFunction],
                                        ],
                                      ],
                                      "results": Array [
                                        Object {
                                          "isThrow": false,
                                          "value": undefined,
                                        },
                                        Object {
                                          "isThrow": false,
                                          "value": undefined,
                                        },
                                      ],
                                    },
                                    "initialValues": undefined,
                                    "initialize": [Function],
                                    "initialized": false,
                                    "invalid": true,
                                    "keepDirtyOnReinitialize": false,
                                    "persistentSubmitErrors": false,
                                    "postComment": [MockFunction],
                                    "postCommentLoading": false,
                                    "pristine": true,
                                    "pure": true,
                                    "register": [Function],
                                    "registerField": [Function],
                                    "registerInnerOnSubmit": [Function],
                                    "registeredFields": Immutable.Map {
                                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Immutable.Map {
                                        "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                                        "type": "Field",
                                        "count": 1,
                                      },
                                    },
                                    "reset": [Function],
                                    "resetSection": [Function],
                                    "sectionPrefix": undefined,
                                    "setSubmitFailed": [Function],
                                    "setSubmitSucceeded": [Function],
                                    "shouldAsyncValidate": [Function],
                                    "shouldError": [Function],
                                    "shouldValidate": [Function],
                                    "shouldWarn": [Function],
                                    "startAsyncValidation": [Function],
                                    "startSubmit": [Function],
                                    "stopAsyncValidation": [Function],
                                    "stopSubmit": [Function],
                                    "submit": [Function],
                                    "submitFailed": false,
                                    "submitSucceeded": false,
                                    "submitting": false,
                                    "syncErrors": Object {
                                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                    },
                                    "syncWarnings": Object {
                                      "app_ViewQuestion_TEXTAREA_COMMENT_FORM": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                    },
                                    "touch": [Function],
                                    "touchOnBlur": true,
                                    "touchOnChange": false,
                                    "translations": Object {},
                                    "triggerSubmit": undefined,
                                    "unregister": [Function],
                                    "unregisterField": [Function],
                                    "untouch": [Function],
                                    "updateSyncErrors": [Function],
                                    "updateSyncWarnings": [Function],
                                    "updateUnregisteredFields": false,
                                    "valid": false,
                                    "validExceptSubmit": false,
                                    "values": Immutable.Map {},
                                    "warning": undefined,
                                  }
                                }
                                asyncValidating={false}
                                component={[Function]}
                                dirty={false}
                                disabled={false}
                                dispatch={[Function]}
                                name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                                normalize={[Function]}
                                pristine={true}
                                syncError={
                                  Object {
                                    "defaultMessage": "Required field",
                                    "id": "app.containers.AskQuestion.requiredField",
                                  }
                                }
                                syncWarning={
                                  Object {
                                    "defaultMessage": "Required field",
                                    "id": "app.containers.AskQuestion.requiredField",
                                  }
                                }
                                validate={
                                  Array [
                                    [Function],
                                    [Function],
                                  ]
                                }
                                warn={
                                  Array [
                                    [Function],
                                    [Function],
                                  ]
                                }
                              >
                                <TextareaField
                                  disabled={false}
                                  input={
                                    Object {
                                      "name": "app_ViewQuestion_TEXTAREA_COMMENT_FORM",
                                      "onBlur": [Function],
                                      "onChange": [Function],
                                      "onDragStart": [Function],
                                      "onDrop": [Function],
                                      "onFocus": [Function],
                                      "value": "",
                                    }
                                  }
                                  meta={
                                    Object {
                                      "active": false,
                                      "asyncValidating": false,
                                      "autofilled": false,
                                      "dirty": false,
                                      "dispatch": [Function],
                                      "error": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                      "form": "form-1010",
                                      "initial": undefined,
                                      "invalid": true,
                                      "pristine": true,
                                      "submitFailed": false,
                                      "submitting": false,
                                      "touched": false,
                                      "valid": false,
                                      "visited": false,
                                      "warning": Object {
                                        "defaultMessage": "Required field",
                                        "id": "app.containers.AskQuestion.requiredField",
                                      },
                                    }
                                  }
                                >
                                  <div>
                                    <h6 />
                                    <textarea
                                      className="textarea form-control"
                                      disabled={false}
                                      name="app_ViewQuestion_TEXTAREA_COMMENT_FORM"
                                      onBlur={[Function]}
                                      onChange={[Function]}
                                      onDragStart={[Function]}
                                      onDrop={[Function]}
                                      onFocus={[Function]}
                                      value=""
                                    />
                                    <h6
                                      className="text-danger"
                                    />
                                  </div>
                                </TextareaField>
                              </ConnectedField>
                            </Connect(ConnectedField)>
                          </Field>
                        </div>
                        <div>
                          <button
                            className="btn btn-secondary"
                            disabled={true}
                            id="app_view_question_post_comment_buttonundefined"
                            type="submit"
                          />
                        </div>
                      </form>
                    </div>
                  </AddCommentForm>
                </Form(AddCommentForm)>
              </Connect(Form(AddCommentForm))>
            </ReduxForm>
          </Router>
        </ConnectedRouter>
      </IntlProvider>
    </LanguageProvider>
  </Connect(LanguageProvider)>
</Provider>
`;
